Triangle-Triangle intersection regression in 2.90 #80444

Closed
opened 2020-09-03 22:03:56 +02:00 by Marcin Surma · 12 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-31 03:47, hash: 6879798202
Worked: (newest version of Blender that worked as expected)

Short description of error
[ display faces that not intersecting and connected with one vertex]

Exact steps for others to reproduce the error
Go to edit mode , search intersect faces in 3d print addon or with overlay analysis - the same result.
werid faces intersection display becouse they are not intersecting. they are joind only one vert intersecting bug.blend

imposible itersection.jpg

bad display of intersecting faces.jpg

bad display of intersecting faces2.jpg

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-31 03:47, hash: `6879798202` Worked: (newest version of Blender that worked as expected) **Short description of error** [ display faces that not intersecting and connected with one vertex] **Exact steps for others to reproduce the error** Go to edit mode , search intersect faces in 3d print addon or with overlay analysis - the same result. werid faces intersection display becouse they are not intersecting. they are joind only one vert [intersecting bug.blend](https://archive.blender.org/developer/F8837540/intersecting_bug.blend) ![imposible itersection.jpg](https://archive.blender.org/developer/F8837542/imposible_itersection.jpg) ![bad display of intersecting faces.jpg](https://archive.blender.org/developer/F8837543/bad_display_of_intersecting_faces.jpg) ![bad display of intersecting faces2.jpg](https://archive.blender.org/developer/F8837544/bad_display_of_intersecting_faces2.jpg)
Author

Added subscriber: @WWS3D

Added subscriber: @WWS3D

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can reproduce this.

At first I thought BVHtree utils don't like triangle fan topology, but I can't reproduce same issue with cone, 500verts and trifan base. I am still not 100% sure this would be a bug, but I am not sure if I can get to bottom of this issue.

I can reproduce this. At first I thought BVHtree utils don't like triangle fan topology, but I can't reproduce same issue with cone, 500verts and trifan base. I am still not 100% sure this would be a bug, but I am not sure if I can get to bottom of this issue.
Author

{F8863399}Hi again.

In #80444#1012871, @iss wrote:
I can reproduce this.

At first I thought BVHtree utils don't like triangle fan topology, but I can't reproduce same issue with cone, 500verts and trifan base. I am still not 100% sure this would be a bug, but I am not sure if I can get to bottom of this issue.

Hi I have a lot of that with my work. I work with smal obiejcts and small dense meshes. ( modeling for 3d print - minis for board games ) those models are like 3 cm tall.
Thats why in that scale i have this behavior
bug intersection.png this is what I have with dyntopo in sculpt mode turn on and auto fill with triagulates. next i check intersections and bamm... now i have a lot of itersections that blender show be but there is no intersection realy.
Definitly bug and is bad for different tasks in blender like booleans becouse booleans search for intersections.

link for a file:
https://we.tl/t-ulKuJYME8z

{[F8863399](https://archive.blender.org/developer/F8863399/intersections_bug_2.blend)}Hi again. > In #80444#1012871, @iss wrote: > I can reproduce this. > > At first I thought BVHtree utils don't like triangle fan topology, but I can't reproduce same issue with cone, 500verts and trifan base. I am still not 100% sure this would be a bug, but I am not sure if I can get to bottom of this issue. Hi I have a lot of that with my work. I work with smal obiejcts and small dense meshes. ( modeling for 3d print - minis for board games ) those models are like 3 cm tall. Thats why in that scale i have this behavior ![bug intersection.png](https://archive.blender.org/developer/F8863375/bug_intersection.png) this is what I have with dyntopo in sculpt mode turn on and auto fill with triagulates. next i check intersections and bamm... now i have a lot of itersections that blender show be but there is no intersection realy. Definitly bug and is bad for different tasks in blender like booleans becouse booleans search for intersections. link for a file: https://we.tl/t-ulKuJYME8z

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-09-22 06:27:59 +02:00

This is a regression in c0340ec893,

This patch reverts the change P1647, as reverting via git gave conflicts.

This is a regression in c0340ec893, This patch reverts the change [P1647](https://archive.blender.org/developer/P1647.txt), as reverting via git gave conflicts.
Campbell Barton changed title from intersection algorithm bug - display faces that not intersecting and connected with one vertex to Triangle-Triangle intersection regression in 2.90 2020-09-22 06:31:44 +02:00
Campbell Barton removed their assignment 2020-09-22 06:31:44 +02:00
Germano Cavalcante was assigned by Campbell Barton 2020-09-22 06:31:44 +02:00

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'

This issue was referenced by d1f906e874

This issue was referenced by d1f906e874ea5a38a5db2f1ace36e257fa7b9272

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

is it fixed? and what regrssion means?

is it fixed? and what regrssion means?
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:25:40 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80444
No description provided.